--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "expo-linear-gradient": "^10.0.3",
     "expo-localization": "11.0.0",
     "i18n-js": "3.8.0",
+    "lodash": "^4.17.21",
     "mobx": "6.1.8",
     "mobx-react-lite": "3.2.0",
     "mobx-state-tree": "5.0.1",
