--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simple-dex",
-  "version": "0.0.1",
+  "version": "1.0.4",
   "private": true,
   "scripts": {
     "start": "react-native start",
@@ -25,7 +25,8 @@
     "build-ios": "react-native bundle --entry-file index.js --platform ios --dev false --bundle-output ios/main.jsbundle --assets-dest ios",
     "build-android": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res",
     "clean": "react-native-clean-project",
-    "clean-all": "npx react-native clean-project-auto"
+    "clean-all": "npx react-native clean-project-auto",
+    "bump": "npx react-native bump-version --skip-semver-for android"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.14.1",
@@ -94,6 +95,7 @@
     "react-devtools-core": "4.10.1",
     "react-dom": "^17.0.2",
     "react-native-clean-project": "^3.6.3",
+    "react-native-cli-bump-version": "^1.3.0",
     "react-native-web": "^0.16.3",
     "react-powerplug": "1.0.0",
     "solidarity": "2.3.1",
