--- a/ios/SimpleDex/Info.plist
+++ b/ios/SimpleDex/Info.plist
@@ -22,6 +22,8 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
+	<key>CodePushDeploymentKey</key>
+	<string>B3BIk1e8zIvRIP6zqBQA3TqHGCCqnDHF3uY2V</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
