--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "mobx-state-tree": "5.0.1",
     "react": "17.0.2",
     "react-native": "0.66.3",
+    "react-native-code-push": "^7.0.4",
     "react-native-device-info": "^8.4.8",
     "react-native-gesture-handler": "1.10.3",
     "react-native-keychain": "6.2.0",
