fix android release builds

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -34,3 +34,9 @@ expo.webp.enabled=true
 # Enable animated webp support (~3.4 MB increase)
 # Disabled by default because iOS doesn't support animated webp
 expo.webp.animated=false
+
+# Appcenter Variables
+MYAPP_UPLOAD_STORE_FILE=simpledex.keystore
+MYAPP_UPLOAD_KEY_ALIAS=simpledex-key
+MYAPP_UPLOAD_STORE_PASSWORD=n.HhVheewsGi_ECq4hi*zKW9
+MYAPP_UPLOAD_KEY_PASSWORD=n.HhVheewsGi_ECq4hi*zKW9
