--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.simpledex">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.cavender.simpledex">
   <uses-permission android:name="android.permission.INTERNET"/>
   <application
     android:name=".MainApplication"
