fix package json

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "appcenter:ios": "bundle exec fastlane ios appcenter",
     "codepush": "npm-run-all codepush:*",
     "codepush:android": "appcenter codepush release-react -a yoshi-lord/simpledex-android -d Production",
-    "codepush:ios": "appcenter codepush release-react -a yoshi-lord/simpledex-iOS -d Production",
+    "codepush:ios": "appcenter codepush release-react -a yoshi-lord/simpledex-iOS -d Production"
 
   },
   "dependencies": {
